--- a/SpringBoot/bootrestbook/src/main/resources/application.properties
+++ b/SpringBoot/bootrestbook/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=bootrestbook
 
 # DataSource settings: set here your own configurations for the database
 spring.datasource.url=jdbc:postgresql://localhost:5432/Testing
-spring.datasource.username=databaseName
-spring.datasource.password=password
+spring.datasource.username=postgres
+spring.datasource.password=001Shoyab
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate settings
