added JsonManagedRefernce and JsonBackRefrence

--- a/SpringBoot/bootrestbook/src/main/resources/application.properties
+++ b/SpringBoot/bootrestbook/src/main/resources/application.properties
@@ -2,17 +2,11 @@ spring.application.name=bootrestbook
 
 # DataSource settings: set here your own configurations for the database
 spring.datasource.url=jdbc:postgresql://localhost:5432/Testing
-<<<<<<< HEAD
-spring.datasource.username=<username>
-spring.datasource.password=<password>
-=======
-spring.datasource.username=databaseName
-spring.datasource.password=password
->>>>>>> db0d1cb71d353fb53e75628e5034456ff98368b3
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate settings
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true 
 spring.jpa.hibernate.ddl-auto=update
-
